--- a/SMS_Presentation/Views/Cliente/MontarTelaCliente.cshtml
+++ b/SMS_Presentation/Views/Cliente/MontarTelaCliente.cshtml
@@ -143,7 +143,7 @@
                         <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
                             <div class="col-lg-2 col-md-2 col-xs-12">
                                 Categoria do Cliente
-                                @Html.DropDownListFor(m => m.CACL_CD_ID, (SelectList)ViewBag.Tipos, "Selecionar", new { @class = "form-control" })
+                                @Html.DropDownListFor(m => m.CACL_CD_ID, (SelectList)ViewBag.Tipos, "Selecionar", new { @class = "form-control", autofocus = true })
                             </div>
                             <div class="col-lg-6 col-md-6 col-xs-12">
                                 Nome/Razão Social
