--- a/SMS_Presentation/Views/Equipamento/IncluirEquipamento.cshtml
+++ b/SMS_Presentation/Views/Equipamento/IncluirEquipamento.cshtml
@@ -57,7 +57,7 @@
         <div class="tabs-container">
             <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#tab-1">Dados Gerais</a></li>
-                <li class=""><a data-toggle="tab" href="#tab-2">Anexos</a></li>
+                <li class=""><a data-toggle="tab" href="#tab-2">Foto e Anexos</a></li>
             </ul>
 
             <div class="tab-content">
