--- a/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
+++ b/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
@@ -78,6 +78,22 @@
                 </ul>
             </li>
 
+            <li @*class="@Html.IsSelected(controller: "BaseAdmin")*@>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")"><i class="fa fa-th-large"></i> <span class="nav-label" data-i18n="nav.dashboard">Operacional</span> <span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level collapse @Html.IsSelected(controller: "BaseAdmin", cssClass: "in")">
+                    <li class="@Html.IsSelected(action: "Index")">
+                        <a href="@Url.Action("CarregarBase", "BaseAdmin")"><i class="fa fa-th-large"></i> <span class="nav-label" data-i18n="nav.dashboard">Estoque</span> <span class="fa arrow"></span></a>
+                        <ul class="nav nav-third-level collapse @Html.IsSelected(controller: "GestaoOperacional", cssClass: "in")">
+                            <li class="@Html.IsSelected(action: "CarregarDesenvolvimento")"><a href="@Url.Action("CarregarDesenvolvimento", "BaseAdmin")">Compras</a></li>
+                            <li class="@Html.IsSelected(action: "MontarTelaMovimentacaoAvulsa")"><a href="@Url.Action("MontarTelaMovimentacaoAvulsa", "Estoque")">Movimentações no Estoque</a></li>
+                            <li class="@Html.IsSelected(action: "MontarTelaEstoqueProduto")"><a href="@Url.Action("MontarTelaEstoqueProduto", "Estoque")">Consulta Produtos</a></li>
+                            <li class="@Html.IsSelected(action: "MontarTelaInventario")"><a href="@Url.Action("MontarTelaInventario", "Estoque")">Inventário</a></li>
+                        </ul>
+                    </li>
+                    <li class="@Html.IsSelected(action: "MontarTelaEquipamento")"><a href="@Url.Action("MontarTelaEquipamento", "Equipamento")">Patrimônio</a></li>
+                </ul>
+            </li>
+
             @*Administração*@
             @if (((EntitiesServices.Model.PERFIL)Session["Perfil"]).PERF_SG_SIGLA  == "ADM" || ((EntitiesServices.Model.PERFIL)Session["Perfil"]).PERF_SG_SIGLA  == "GER")
             {
