--- a/SMS_Presentation/Views/Estoque/VerMovimentacaoEstoqueProduto.cshtml
+++ b/SMS_Presentation/Views/Estoque/VerMovimentacaoEstoqueProduto.cshtml
@@ -1,7 +1,169 @@
-﻿
+﻿@using Presentation.Extensions
+@using CrossCutting;
+@model SMS_Solution.ViewModels.ProdutoViewModel
 @{
-    ViewBag.Title = "VerMovimentacaoEstoqueProduto";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
+}
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="page-title"> 
+        <h3 class="title">Produtos - Estoque</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaEstoqueProduto", "Estoque")">Produtos - Estoque</a>
+            </li>
+            <li class="active">
+                <strong>Produtos - Movimentação do Estoque</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Produto - Movimentação do Estoque</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Config option 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Config option 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="ibox-content">
+                    @using (Html.BeginForm("FiltrarMovimentacaoEstoqueProduto", "Estoque", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal" }))
+                    {
+                        <div class="ibox-content">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-2 col-md-2 col-xs-12">
+                                    @Html.HiddenFor(x => x.PROD_CD_ID)
+                                    Entrada/Saída
+                                    @Html.DropDownList("EntradaSaida", (SelectList)ViewBag.FiltroEntradaSaida, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
+                                <div class="col-lg-12 col-md-12 col-xs-12">
+                                    @Html.ButtonActionSubmit(text: "Filtrar")
+                                    @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Estoque", action: "RetirarFiltroMovimentacaoEstoqueProduto", routeValues: new { id = Model.PROD_CD_ID })
+                                    @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarBaseProduto", controller: "Estoque")
+                                </div>
+                            </div>
+                        </div>
+                    }
+                <div class="row">
+                    @if (Model.MOVIMENTO_ESTOQUE_PRODUTO.Count > 0)
+                    {
+                        <table class="table table-striped table-bordered table-hover dataTables-example">
+                            <thead style="background-color:lightsteelblue">
+                                <tr>
+                                    <th>Produto</th>
+                                    <th>Data</th>
+                                    <th>Operação</th>
+                                    <th>Origem</th>
+                                    <th>Tipo de Operação</th>
+                                    <th>Quantidade</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var cond in (Model.MOVIMENTO_ESTOQUE_PRODUTO))
+                                {
+                                    <tr>
+                                        <td>@cond.PRODUTO.PROD_NM_NOME</td>
+                                        <td>@cond.MOEP_DT_MOVIMENTO.ToShortDateString()</td>
+                                        @if (cond.MOEP_IN_OPERACAO == 1)
+                                        {
+                                            <td>Entrada</td>
+                                        }
+                                        else if (cond.MOEP_IN_OPERACAO == 2)
+                                        {
+                                            <td>Saída</td>
+                                        }
+                                        else
+                                        {
+                                            <td>Manual</td>
+                                        }
+                                        @if (cond.MOEP_IN_CHAVE_ORIGEM == 1)
+                                        {
+                                            <td>Lançamento Avulso</td>
+                                        }
+                                        else if (cond.MOEP_IN_CHAVE_ORIGEM == 2)
+                                        {
+                                            <td>Inventário</td>
+                                        }
+                                        else if (cond.MOEP_IN_CHAVE_ORIGEM == 3)
+                                        {
+                                            <td>Compra</td>
+                                        }
+                                        else if (cond.MOEP_IN_CHAVE_ORIGEM == 4)
+                                        {
+                                            <td>Venda</td>
+                                        }
+                                        else if (cond.MOEP_IN_CHAVE_ORIGEM == 5)
+                                        {
+                                            <td>Compra Expressa</td>
+                                        }
+                                        else
+                                        {
+                                            <td>Manual</td>
+                                        }
+                                        <td>@cond.MOEP_IN_ORIGEM</td>
+                                        <td>@cond.MOEP_QN_QUANTIDADE</td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    }
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
 }
 
-<h2>VerMovimentacaoEstoqueProduto</h2>
+@section Scripts {
+
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+    
+   
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+        });
+    </script>
+}
+
+@if (ViewBag.Message != null)
+{
+    <script type="text/javascript">
+            window.onload = function () {
+                alert("@ViewBag.Message");
+            };
+    </script>
+}
 
