--- a/SMS_Presentation/Views/Estoque/MontarTelaEstoqueProduto.cshtml
+++ b/SMS_Presentation/Views/Estoque/MontarTelaEstoqueProduto.cshtml
@@ -89,6 +89,7 @@
                             <div class="col-lg-12 col-md-12 col-xs-12">
                                 @Html.ButtonActionSubmit(text: "Filtrar")
                                 @Html.ButtonLinkIndex(text: "Retirar Filtro", controller: "Estoque", action: "RetirarFiltroProduto")
+                                @Html.ButtonLinkIndex(text: "Incluir Movimentação Avulsa", controller: "Estoque", action: "IncluirMovimentacaoAvulsa")
                                 @Html.ButtonLinkIndex(text: "Gerar Relatório", controller: "Estoque", action: "GerarRelatorioEstoqueProduto")
                                 @Html.ButtonLinkIndex(text: "Voltar", controller: "Estoque", action: "Voltar")
                             </div>
