--- a/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
+++ b/SMS_Presentation/Views/Shared/_Navigation_Admin.cshtml
@@ -72,6 +72,7 @@
                                 <li class="@Html.IsSelected(action: "MontarTelaGrupo")"><a href="@Url.Action("MontarTelaGrupo", "Grupo")">Grupos</a></li>
                                 <li class="@Html.IsSelected(action: "MontarTelaSubGrupo")"><a href="@Url.Action("MontarTelaSubGrupo", "Grupo")">Sub-Grupos</a></li>
                                 <li class="@Html.IsSelected(action: "MontarTelaCC")"><a href="@Url.Action("MontarTelaCC", "CentroCusto")">Centros de Custos</a></li>
+                                <li class="@Html.IsSelected(action: "MontarTelaFormaPagamento")"><a href="@Url.Action("MontarTelaFormaPagamento", "FormaPagamento")">Formas de Pagamento</a></li>
                             </ul>
                         </li>
 	                }
