--- a/SMS_Presentation/Views/ContaPagar/VerAnexoLancamentoCP.cshtml
+++ b/SMS_Presentation/Views/ContaPagar/VerAnexoLancamentoCP.cshtml
@@ -1,7 +1,131 @@
-﻿
+﻿@using Presentation.Extensions
+@model EntitiesServices.Model.CONTA_PAGAR_ANEXO
 @{
-    ViewBag.Title = "VerAnexoLancamentoCP";
+    Layout = "~/Views/Shared/_Layout_Admin.cshtml";
 }
+<div class="wrapper wrapper-content animated fadeInRight"> 
+    <div class="page-title"> 
+        <h3 class="title">Contas a Pagar</h3> 
+        <br />
+        <ol class="breadcrumb">
+            <li>
+                <a href="@Url.Action("CarregarBase", "BaseAdmin")">Dashboard</a>
+            </li>
+            <li>
+                <a href="@Url.Action("MontarTelaCP", "ContaPagar")">Contas a Pagar</a>
+            </li>
+            <li>
+                <a href="@Url.Action("EditarCP", "ContaPagar")">Contas a Pagar - Edição</a>
+            </li>
+            <li class="active">
+                <strong>Contas a Pagar - Ver Anexo</strong>
+            </li>
+        </ol>
+        <br />
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-xs-12 ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>Contas a Pagar - Ver Anexo</h5>
+                    <div class="ibox-tools">
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <i class="fa fa-wrench"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a href="#">Configuração 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Configuração 2</a>
+                            </li>
+                        </ul>
+                        <a class="close-link">
+                            <i class="fa fa-times"></i>
+                        </a>
+                    </div>
+                </div>
+                @using (Html.BeginForm("VerAnexoLancamentoCP", "ContaPagar", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", @id="pwd-container1" }))
+                {
+                    <div class="ibox-content">
+                        <div class="row">
+                            <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">                
+                                <div class="col-lg-3 col-md-3 col-xs-12">
+                                    Titulo
+                                    @Html.TextBoxFor(m => m.CPAN_NM_TITULO, new { @class = "form-control", @readonly="readonly", autofocus = true })
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-xs-12">
+                                    Data
+                                    @Html.TextBoxFor(m => m.CPAN_DT_ANEXO, "{0:dd/MM/yyyy}", new { @class = "form-control", @readonly="readonly", autofocus = true })
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.ButtonLinkIndex(text: "Voltar", action: "VoltarAnexoCP", controller: "ContaPagar")
+                        </div>
+                        <div class="form-group">
+                            @if (Model.CPAN_IN_TIPO == 1)
+	                        {
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                        <img src="@Url.Content(Model.CPAN_AQ_ARQUIVO)" style = "width: auto; height: auto; max-height: 600px; max-width: 900px;">
+                                    </div>
+                                </div>
+	                        } 
+                            @if (Model.CPAN_IN_TIPO == 2)
+	                        {
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <figure>
+                                        <iframe width="900" height="600" src="@Url.Content(Model.CPAN_AQ_ARQUIVO)" frameborder="0" allowfullscreen></iframe>
+                                    </figure>
+                                </div>
+	                        }
+                        </div>
+                    </div>
+                }
+            </div>
+         </div>
+    </div>
+</div>
 
-<h2>VerAnexoLancamentoCP</h2>
+@section Styles {
+    <link href="~/Content/themes/base/all.css" rel="stylesheet" />  
+    @Styles.Render("~/Content/plugins/dataTables/dataTablesStyles")
+    @Styles.Render("~/plugins/jasnyBootstrapStyles")
+}
+@section Scripts {
+   
+    @Scripts.Render("~/plugins/dataTables")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/plugins/jasnyBootstrap")
+    @Scripts.Render("~/plugins/videoResponsible")
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.js"></script>
+
+    <script type="text/javascript">
+        $(function () {
+            $("#cpf").mask("999.999.999-99");
+            $("#cnpj").mask("99.999.999/9999-99");
+            $("#cep").mask("99999-999");
+        });
+    </script>
+
+    <script type="text/javascript">
+        $(document).on('webkitfullscreenchange mozfullscreenchange fullscreenchange', function (e) {
+            $('body').hasClass('fullscreen-video') ? $('body').removeClass('fullscreen-video') : $('body').addClass('fullscreen-video')
+        });
+    </script>
+
+
+    @if (ViewBag.Message != null)
+    {
+        <script type="text/javascript">
+            window.onload = function () {
+                  alert("@ViewBag.Message");
+            };
+        </script>
+    }
+}
 
