--- a/SMS_Presentation/Views/FormaPagamento/MontarTelaFormaPagamento.cshtml
+++ b/SMS_Presentation/Views/FormaPagamento/MontarTelaFormaPagamento.cshtml
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        @if ((ViewBag.Listas as List<EntitiesServices.Model.FORMA_PAGAMENTO>).Count > 0)
+                        @if (ViewBag.Listas != null && (ViewBag.Listas as List<EntitiesServices.Model.FORMA_PAGAMENTO>).Count > 0)
                         {
                             <table class="table table-striped table-bordered table-hover dataTables-example">
                                 <thead>
@@ -125,6 +125,23 @@
                                     }
                                 </tbody>
                             </table>
+                        }
+                        else
+                        {
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4 col-xs-2">
+
+                                </div>
+                                <div style="border: 5px solid #F6A54A; padding: 10px; border-radius: 8px 8px; " class="col-lg-4 col-md-4 col-xs-8">
+                                    <h2 style="font-weight: bold">Sua pesquisa não retornou nenhum resultado</h2>
+                                    <p>Tente outras opções de pesquisa</p>
+
+                                    @Html.ButtonLinkIndex(text: "Voltar", controller: "FormaPagamento", action: "Voltar")
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-xs-2">
+
+                                </div>
+                            </div>
                         }
                     </div>
                     <div class="form-group" style=" margin-left: -15px; margin-right: -15px;">
